force-app/main/default/objects/DocumentType__mdt/DocumentType__mdt.object-meta.xml
<CustomObject>
    <label>DocumentType</label>
    <pluralLabel>DocumentTypes</pluralLabel>
</CustomObject>