force-app/main/default/objects/DocumentType__mdt/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOB 1</fullName>
                <default>true</default>
                <label>LOB 1</label>
            </value>
            <value>
                <fullName>LOB 2</fullName>
            </value>
            <value>
                <fullName>LOB 3</fullName>
            </value>
            <value>
                <fullName>LOB 4</fullName>
            </value>
            <value>
                <fullName>LOB 5</fullName>
            </value>
            <value>
                <fullName>LOB 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>