force-app/main/default/objects/DocumentType__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Community Login User</fullName>
                <default>true</default>
                <label>Customer Community Login User</label>
            </value>
            <value>
                <fullName>Customer Community User</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>