force-app/main/default/objects/DocumentType__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>