force-app/main/default/objects/DocumentType__mdt/fields/View_Upload__c.field-meta.xml
<CustomField>
    <fullName>View_Upload__c</fullName>
    <label>View/Upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload</fullName>
                <default>true</default>
                <label>Upload</label>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>