force-app/main/default/objects/DocumentType__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>LOB__c</columns>
    <columns>Profile__c</columns>
    <columns>Type__c</columns>
    <columns>View_Upload__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>